aligns fruit title, price on mobiles. Fixes cards growing to big on a huge 28inch screen

--- a/src/components/PriceFormatter.css
+++ b/src/components/PriceFormatter.css
@@ -2,7 +2,7 @@
 .price-formatter--smaller {
   font-size: 3rem;
   font-weight: 400;
-  line-height: 3rem;
+  line-height: 1.5em;
   margin: 0 0.5rem;
 }
 
